created sample data; hid ip and port

--- a/DataStuff/getAllPokemons.ipynb
+++ b/DataStuff/getAllPokemons.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import json"
    ]
   },
   {
@@ -18,7 +19,6 @@
    "outputs": [],
    "source": [
     "url = \"https://en.wikipedia.org/wiki/List_of_generation_I_Pok%C3%A9mon\"\n",
-    "\n",
     "response = requests.get(url)\n",
     "soup = BeautifulSoup(response.text, \"html.parser\")"
    ]
@@ -26,22 +26,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tables = soup.find_all(\"table\")\n",
-    "\n",
-    "# Search for the table with the specific caption\n",
-    "target_table = None\n",
-    "for table in tables:\n",
-    "    if table.caption and \"List of Pokémon species introduced in Generation I (1996)\" in table.caption.get_text():\n",
-    "        target_table = table\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,72 +154,27 @@
        "4  Charmeleon is similar to Charmander yet larger...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "tables = soup.find_all(\"table\")\n",
+    "\n",
+    "# Search for the table with the specific caption\n",
+    "target_table = None\n",
+    "for table in tables:\n",
+    "    if table.caption and \"List of Pokémon species introduced in Generation I (1996)\" in table.caption.get_text():\n",
+    "        target_table = table\n",
+    "        break\n",
     "df = pd.read_html(str(target_table))[0]\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MultiIndex([(                   'Name',                 'English'),\n",
-       "            (                   'Name',                'Japanese'),\n",
-       "            ('National Pokédex number', 'National Pokédex number'),\n",
-       "            (                'Type(s)',                 'Primary'),\n",
-       "            (                'Type(s)',               'Secondary'),\n",
-       "            (           'Evolves from',            'Evolves from'),\n",
-       "            (           'Evolves into',            'Evolves into'),\n",
-       "            (                  'Notes',                   'Notes')],\n",
-       "           )"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# assume your DataFrame is named `df`\n",
-    "cols_to_keep = [('Name', 'English'),('National Pokédex number','National Pokédex number'), ('Type(s)', 'Primary'), ('Type(s)', 'Secondary'), ('Evolves from', 'Evolves from'), ('Evolves into', 'Evolves into'), ('Notes', 'Notes')]\n",
-    "\n",
-    "# select only the relevant columns using loc[]\n",
-    "df_subset = df.loc[:, cols_to_keep]\n",
-    "\n",
-    "# flatten the MultiIndex by joining the column levels with '_'\n",
-    "df_subset.columns = ['_'.join(col).strip() for col in df_subset.columns.values]\n",
-    "\n",
-    "# rename the columns as desired\n",
-    "df_subset = df_subset.rename(columns={'Name_English': 'Name',\n",
-    "                                      'National Pokédex number_National Pokédex number':'PokeIndex',\n",
-    "                                      'Type(s)_Primary': 'Primary type',\n",
-    "                                      'Type(s)_Secondary': 'Secondary type',\n",
-    "                                      'Evolves from_Evolves from': 'Evolves from',\n",
-    "                                      'Evolves into_Evolves into': 'Evolves into',\n",
-    "                                      'Notes_Notes': 'Notes'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -346,25 +285,48 @@
        "4  Charmeleon is similar to Charmander yet larger...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "cols_to_keep = [('Name', 'English'),('National Pokédex number','National Pokédex number'), ('Type(s)', 'Primary'), ('Type(s)', 'Secondary'), ('Evolves from', 'Evolves from'), ('Evolves into', 'Evolves into'), ('Notes', 'Notes')]\n",
+    "df_subset = df.loc[:, cols_to_keep]\n",
+    "df_subset.columns = ['_'.join(col).strip() for col in df_subset.columns.values]\n",
+    "df_subset = df_subset.rename(columns={'Name_English': 'Name',\n",
+    "                                      'National Pokédex number_National Pokédex number':'PokeIndex',\n",
+    "                                      'Type(s)_Primary': 'Primary type',\n",
+    "                                      'Type(s)_Secondary': 'Secondary type',\n",
+    "                                      'Evolves from_Evolves from': 'Evolves from',\n",
+    "                                      'Evolves into_Evolves into': 'Evolves into',\n",
+    "                                      'Notes_Notes': 'Notes'})\n",
     "df_subset.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "151"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Pokemons=[]\n",
     "\n",
     "for row in df_subset.iterrows():\n",
     "    data=row[1]\n",
+    "    if data['Name'] == 'MissingNo.':\n",
+    "            continue\n",
     "    dataDict={\n",
     "            \"PokeIndex\":data['PokeIndex'],\n",
     "            \"name\":data['Name'],\n",
@@ -374,39 +336,10 @@
     "            \"Evolves into\":data['Evolves into'],\n",
     "            \"Notes\":data['Notes']\n",
     "    }\n",
-    "    Pokemons.append(dataDict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "152"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(Pokemons)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
+    "    Pokemons.append(dataDict)\n",
     "with open('PokemonDataSet.json','w') as f:\n",
-    "    json.dump(Pokemons,f)"
+    "    json.dump(Pokemons,f)\n",
+    "len(Pokemons)"
    ]
   }
  ],
