--- a/DataStuff/sampleData.ipynb
+++ b/DataStuff/sampleData.ipynb
@@ -2,33 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'name': '5023a93705cc', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'bU3iWkjPQ_u0F4VrBeHiXQ', 'version': {'number': '8.7.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '09520b59b6bc1057340b55750186466ea715e30e', 'build_date': '2023-03-27T16:31:09.816451435Z', 'build_snapshot': False, 'lucene_version': '9.5.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pokemin_mapping={\n",
-    "    \"mappings\":{\n",
-    "        \"properties\":{\n",
-    "            \"PokeIndex\":{\"type\":\"integer\"},\n",
-    "            \"name\":{\"type\":\"text\"},\n",
-    "            \"Primary type\":{\"type\":\"text\"},\n",
-    "            \"Secondary type\":{\"type\":\"text\"},\n",
-    "            \"Evolves from\":{\"type\":\"text\"},\n",
-    "            \"Evolves into\":{\"type\":\"text\"},\n",
-    "            \"Notes\":{\"type\":\"text\"}\n",
-    "        }\n",
-    "    }\n",
-    "}"
+    "from elasticsearch import Elasticsearch\n",
+    "import json\n",
+    "es = Elasticsearch([\"http://localhost:9200\"])\n",
+    "es.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True})"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "arena_mapping = {\n",
-    "  \"mappings\": {\n",
+    "# es.indices.delete(index='pokemon')\n",
+    "# es.indices.delete(index='arena')\n",
+    "# es.indices.delete(index='trainer')\n",
+    "# es.indices.delete(index='poke_market')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index='pokemon' created: True\n",
+      "index='arena' created: True\n",
+      "index='trainer' created: True\n",
+      "index='poke_market' created: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "pokemon_mapping={\n",
+    "    \"dynamic\":\"true\",\n",
+    "    \"properties\":{\n",
+    "        \"PokeIndex\":{\"type\":\"integer\"},\n",
+    "        \"name\":{\"type\":\"text\"},\n",
+    "        \"Primary type\":{\"type\":\"text\"},\n",
+    "        \"Secondary type\":{\"type\":\"text\"},\n",
+    "        \"Evolves from\":{\"type\":\"text\"},\n",
+    "        \"Evolves into\":{\"type\":\"text\"},\n",
+    "        \"Notes\":{\"type\":\"text\"}\n",
+    "    }\n",
+    "}\n",
+    "arena_mapping= {\n",
+    "    \"dynamic\":\"true\",\n",
     "    \"properties\": {\n",
     "      \"name\": {\"type\": \"text\"},\n",
     "      \"city\": {\"type\": \"text\"},\n",
@@ -53,18 +101,9 @@
     "      \"badge\": {\"type\": \"text\"},\n",
     "      \"type\": {\"type\": \"keyword\"}\n",
     "    }\n",
-    "  }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainer_mapping = {\n",
-    "  \"mappings\": {\n",
+    "}\n",
+    "trainer_mapping={\n",
+    "    \"dynamic\":\"true\",\n",
     "    \"properties\": {\n",
     "      \"first_name\": {\"type\": \"text\"},\n",
     "      \"last_name\": {\"type\": \"text\"},\n",
@@ -81,18 +120,9 @@
     "      },\n",
     "      \"badges\": {\"type\": \"keyword\"}\n",
     "    }\n",
-    "  }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poke_market_mapping = {\n",
-    "  \"mappings\": {\n",
+    "}\n",
+    "poke_market_mapping= {\n",
+    "    \"dynamic\":\"false\",\n",
     "    \"properties\": {\n",
     "      \"name\": {\"type\": \"text\"},\n",
     "      \"location\": {\"type\": \"text\"},\n",
@@ -108,13 +138,29 @@
     "        }\n",
     "      }\n",
     "    }\n",
-    "  }\n",
-    "}"
+    "}\n",
+    "\n",
+    "print(\"index='pokemon' created:\",es.indices.create(index='pokemon', mappings=pokemon_mapping)['acknowledged'])\n",
+    "print(\"index='arena' created:\",es.indices.create(index='arena', mappings=arena_mapping)['acknowledged'])\n",
+    "print(\"index='trainer' created:\",es.indices.create(index='trainer', mappings=trainer_mapping)['acknowledged'])\n",
+    "print(\"index='poke_market' created:\",es.indices.create(index='poke_market', mappings=poke_market_mapping)['acknowledged'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('PokemonDataSet.json','r') as f:\n",
+    "    pokemons=json.load(f)\n",
+    "for pokemon in pokemons:\n",
+    "    es.index(index='pokemon',id=pokemon['PokeIndex'] , document=pokemon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,16 +395,18 @@
     "      }\n",
     "    ]\n",
     "  }\n",
-    "]"
+    "]\n",
+    "for markt in maerkte:\n",
+    "    es.index(index='poke_market', document=markt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer=[\n",
+    "trainers=[\n",
     "  {\n",
     "    \"first_name\": \"Ash\",\n",
     "    \"last_name\": \"Ketchum\",\n",
@@ -482,22 +530,30 @@
     "  ],\n",
     "  \"badges\": ['Clown','President']\n",
     "}\n",
-    "]"
+    "]\n",
+    "\n",
+    "for trainer in trainers:\n",
+    "    es.index(index='trainer', document=trainer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arenen=[\n",
+    "arenas = [\n",
     "  {\n",
     "    \"name\": \"Pewter City Gym\",\n",
     "    \"location\": \"Pewter City\",\n",
     "    \"gym_leader\": {\n",
     "      \"first_name\": \"Brock\",\n",
-    "      \"last_name\": \"Harrison\"\n",
+    "      \"last_name\": \"Harrison\",\n",
+    "      \"pokemon\": [\n",
+    "        {\"id\": 74, \"name\": \"Geodude\", \"level\": 12, \"hp\": 40},\n",
+    "        {\"id\": 95, \"name\": \"Onix\", \"level\": 14, \"hp\": 35},\n",
+    "        {\"id\": 111, \"name\": \"Rhyhorn\", \"level\": 13, \"hp\": 43}\n",
+    "      ]\n",
     "    },\n",
     "    \"badge\": \"Boulder Badge\",\n",
     "    \"type\": \"Rock\"\n",
@@ -507,7 +563,12 @@
     "    \"location\": \"Cerulean City\",\n",
     "    \"gym_leader\": {\n",
     "      \"first_name\": \"Misty\",\n",
-    "      \"last_name\": \"Waterflower\"\n",
+    "      \"last_name\": \"Waterflower\",\n",
+    "      \"pokemon\": [\n",
+    "        {\"id\": 120, \"name\": \"Staryu\", \"level\": 18, \"hp\": 40},\n",
+    "        {\"id\": 121, \"name\": \"Starmie\", \"level\": 21, \"hp\": 60},\n",
+    "        {\"id\": 118, \"name\": \"Goldeen\", \"level\": 19, \"hp\": 45}\n",
+    "      ]\n",
     "    },\n",
     "    \"badge\": \"Cascade Badge\",\n",
     "    \"type\": \"Water\"\n",
@@ -517,7 +578,13 @@
     "    \"location\": \"Vermilion City\",\n",
     "    \"gym_leader\": {\n",
     "      \"first_name\": \"Lt. Surge\",\n",
-    "      \"last_name\": \"\"\n",
+    "      \"last_name\": \"\",\n",
+    "      \"pokemon\": [\n",
+    "        {\"id\": 100, \"name\": \"Voltorb\", \"level\": 21, \"hp\": 40},\n",
+    "        {\"id\": 101, \"name\": \"Electrode\", \"level\": 24, \"hp\": 60},\n",
+    "        {\"id\": 25, \"name\": \"Pikachu\", \"level\": 18, \"hp\": 35},\n",
+    "        {\"id\": 26, \"name\": \"Raichu\", \"level\": 24, \"hp\": 60}\n",
+    "      ]\n",
     "    },\n",
     "    \"badge\": \"Thunder Badge\",\n",
     "    \"type\": \"Electric\"\n",
@@ -527,18 +594,39 @@
     "    \"location\": \"Celadon City\",\n",
     "    \"gym_leader\": {\n",
     "      \"first_name\": \"Erika\",\n",
-    "      \"last_name\": \"\"\n",
+    "      \"last_name\": \"\",\n",
+    "      \"pokemon\": [\n",
+    "        {\"id\": 71, \"name\": \"Victreebel\", \"level\": 29, \"hp\": 80},\n",
+    "        {\"id\": 45, \"name\": \"Vileplume\", \"level\": 29, \"hp\": 75},\n",
+    "        {\"id\": 114, \"name\": \"Tangela\", \"level\": 24, \"hp\": 65}\n",
+    "      ]\n",
     "    },\n",
     "    \"badge\": \"Rainbow Badge\",\n",
     "    \"type\": \"Grass\"\n",
     "  }\n",
-    "]"
+    "]\n",
+    "for arena in arenas:\n",
+    "  es.index(index='arena',id=arena['name'], document=arena)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "elasticsearch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
